src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Bluebox_Lease_Reference__c</fullName>
        <label>Bluebox Lease Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <description>Custom Contract Term</description>
        <label>Contract Term</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Active_Contract__c</fullName>
        <formula>AND(TODAY() &gt;= StartDate, TODAY() &lt;= EndDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Active Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Mandate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Mandate</label>
        <referenceTo>Customer_Confidential_Documentation__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to highlight if the deposit is not required  for the customer to move in</inlineHelpText>
        <label>Deposit Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid_Value__c</fullName>
        <inlineHelpText>Amount the customer has paid towards the deposit</inlineHelpText>
        <label>Deposit Paid Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_required_Value__c</fullName>
        <inlineHelpText>Amount the customer has yet to pay towards the deposit</inlineHelpText>
        <label>Deposit required Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Bill_Date__c</fullName>
        <inlineHelpText>Date when FinancialForce will start invoicing</inlineHelpText>
        <label>First Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Holding_Over_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holding Over Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Contract_End_Date__c</fullName>
        <inlineHelpText>Date when contract legally expires, but can be different from contract end date if contract is holding over</inlineHelpText>
        <label>Legal Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Determines which Bruntwood portfolio this falls under for financing</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text( Property__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;),EndDate &gt; TODAY()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
        <description>Record Type of the Amendment Opportunity, unless otherwise specified.</description>
        <inlineHelpText>Record Type of the Amendment Opportunity, unless otherwise specified.</inlineHelpText>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityStage__c</fullName>
        <description>The current stage of the Amendment Opportunity.</description>
        <inlineHelpText>The current stage of the Amendment Opportunity.</inlineHelpText>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentPricebookId__c</fullName>
        <description>Price Book Id of your Amendment.</description>
        <inlineHelpText>Price Book Id of your Amendment.</inlineHelpText>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentRenewalBehavior__c</fullName>
        <description>The basis for which a Renewal Start Date and Amendment End Date are calculated.</description>
        <inlineHelpText>The basis for which a Renewal Start Date and Amendment End Date are calculated.</inlineHelpText>
        <label>Amendment &amp; Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest End Date</fullName>
                    <default>true</default>
                    <label>Latest End Date</label>
                </value>
                <value>
                    <fullName>Earliest End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentStartDate__c</fullName>
        <description>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</description>
        <inlineHelpText>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</inlineHelpText>
        <label>Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include contact roles from the original opportunity in the renewal opportunity.</description>
        <inlineHelpText>Select to include contact roles from the original opportunity in the renewal opportunity.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include the original opportunity partners in renewal opportunity.</description>
        <inlineHelpText>Select to include the original opportunity partners in renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisableAmendmentCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</description>
        <inlineHelpText>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</inlineHelpText>
        <label>Disable Amendment Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Contract end date for use in time-based workflows.</description>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MDQRenewalBehavior__c</fullName>
        <description>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment’s data.</description>
        <inlineHelpText>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment&apos;s data.</inlineHelpText>
        <label>MDQ Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De-segmented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</description>
        <inlineHelpText>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OpportunityPricebookId__c</fullName>
        <description>ID of the Price Book used from the original Opportunity.</description>
        <formula>SBQQ__Opportunity__r.Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID of the Price Book used from the original Opportunity.</inlineHelpText>
        <label>Opportunity Pricebook Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity from which this Contract was created.</description>
        <inlineHelpText>The Opportunity from which this Contract was created.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes.</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote from which this Contract was created.</description>
        <inlineHelpText>Quote from which this Contract was created.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</description>
        <inlineHelpText>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity if different from the default.</description>
        <inlineHelpText>Record type of renewal opportunity if different from the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</description>
        <inlineHelpText>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</description>
        <inlineHelpText>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to automatically generate a renewal quote on renewal opportunities.</description>
        <inlineHelpText>Select this option to automatically generate a renewal quote on renewal opportunities.</inlineHelpText>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</description>
        <inlineHelpText>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</inlineHelpText>
        <label>Combine Subscription Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surrender_Date__c</fullName>
        <inlineHelpText>This field will be updated when the proposed surrender date field is populated when the contract is surrender</inlineHelpText>
        <label>Surrender Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Lease_Parking_Spaces__c</fullName>
        <label>Total Lease Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Licensed_Parking_Spaces__c</fullName>
        <label>Total Licensed Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__BC_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contract</label>
        <referenceTo>ffbc__Contract__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Activated_Conventional_Sales</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Property__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Holding_Over_Flag__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBQQ__ActiveContract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK2.Name</field>
            <operation>equals</operation>
            <value>Conventional Sales</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Activated</value>
        </filters>
        <label>Activated Conventional Sales</label>
    </listViews>
    <listViews>
        <fullName>Activated_Serviced_Sales</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Property__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Holding_Over_Flag__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK2.Name</field>
            <operation>equals</operation>
            <value>Serviced Sales</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Activated</value>
        </filters>
        <label>Activated Serviced Sales</label>
    </listViews>
    <listViews>
        <fullName>Activated_Virtual_Sales</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Property__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Holding_Over_Flag__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK2.Name</field>
            <operation>equals</operation>
            <value>Virtual Sales</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Activated</value>
        </filters>
        <label>Activated Virtual Sales</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Region__c</columns>
        <columns>Property__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBQQ__Quote__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Activated</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Region__c</columns>
        <columns>Property__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBQQ__Quote__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Region__c</columns>
        <columns>Property__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBQQ__Quote__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Region__c</columns>
        <columns>Property__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBQQ__Quote__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Conventional_Sales</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Property__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Holding_Over_Flag__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK2.Name</field>
            <operation>equals</operation>
            <value>Conventional Sales</value>
        </filters>
        <label>Conventional Sales</label>
    </listViews>
    <listViews>
        <fullName>Live_Conventional_Sales</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Property__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Holding_Over_Flag__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK2.Name</field>
            <operation>equals</operation>
            <value>Conventional Sales</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Activated</value>
        </filters>
        <label>Live Conventional Sales</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Property__c</columns>
        <columns>Region__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBQQ__Quote__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Region__c</columns>
        <columns>Property__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBQQ__Quote__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Non_Legacy_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PRICEBOOK2.Name</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bluebox_Lease_Reference__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>PRICEBOOK2.Name</field>
            <operation>equals</operation>
            <value>Serviced Sales</value>
        </filters>
        <label>Non-Legacy Contracts</label>
    </listViews>
    <listViews>
        <fullName>Not_Activated_Conventional_Sales</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Property__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Holding_Over_Flag__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK2.Name</field>
            <operation>equals</operation>
            <value>Conventional Sales</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Not_Activated</value>
        </filters>
        <label>Not Activated Conventional Sales</label>
    </listViews>
    <listViews>
        <fullName>Not_Activated_Serviced_Sales</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Property__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Holding_Over_Flag__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRICEBOOK2.Name</field>
            <operation>equals</operation>
            <value>Serviced Sales</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Not_Activated</value>
        </filters>
        <label>Not Activated Serviced Sales</label>
    </listViews>
    <recordTypes>
        <fullName>Activated</fullName>
        <active>true</active>
        <label>Activated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Not_Activated</fullName>
        <active>true</active>
        <label>Not Activated</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HoldingOverChecked_contract_was_created</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISNEW(),
    Holding_Over_Flag__c,
    Pricebook2.RecordType.Name   &lt;&gt; &apos;Virtual&apos;
)</errorConditionFormula>
        <errorDisplayField>Holding_Over_Flag__c</errorDisplayField>
        <errorMessage>Holding Over Flag can only be checked when the contract was created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Holding_Over_Flag_can_only_be_checked</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
            Pricebook2.RecordType.Name &lt;&gt; &apos;Virtual&apos;,
            EndDate = Legal_Contract_End_Date__c,
            Holding_Over_Flag__c
)</errorConditionFormula>
        <errorDisplayField>Holding_Over_Flag__c</errorDisplayField>
        <errorMessage>Holding Over Flag can only be checked when the Legal End Date and Contract End Date fields are not equal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryWhenActivateContractLegalEntity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status , &apos;Activated&apos;),
        ISPICKVAL(Status , &apos;Changes Active&apos;)
    ),
    ISBLANK(Legal_Entity__c)
)</errorConditionFormula>
        <errorDisplayField>Legal_Entity__c</errorDisplayField>
        <errorMessage>Complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryWhenActivateContract_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status , &apos;Activated&apos;),
        ISPICKVAL(Status , &apos;Changes Active&apos;)
    ),
    ISBLANK(AccountId)
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryWhenActivateContract_DD_Mandate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status , &apos;Activated&apos;),
        ISPICKVAL(Status , &apos;Changes Active&apos;)
    ),
    ISBLANK(DD_Mandate__c)
)</errorConditionFormula>
        <errorDisplayField>DD_Mandate__c</errorDisplayField>
        <errorMessage>Complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryWhenActivateContract_FirstBillD</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status , &apos;Activated&apos;),
        ISPICKVAL(Status , &apos;Changes Active&apos;)
    ),
    ISBLANK(First_Bill_Date__c)
)</errorConditionFormula>
        <errorDisplayField>First_Bill_Date__c</errorDisplayField>
        <errorMessage>Complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryWhenActivateContract_Pricebook</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status , &apos;Activated&apos;),
        ISPICKVAL(Status , &apos;Changes Active&apos;)
    ),
    ISBLANK(Pricebook2Id)
)</errorConditionFormula>
        <errorDisplayField>Pricebook2Id</errorDisplayField>
        <errorMessage>Complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryWhenActivateContract_Property</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status , &apos;Activated&apos;),
        ISPICKVAL(Status , &apos;Changes Active&apos;)
    ),
    ISBLANK(Property__c)
)</errorConditionFormula>
        <errorDisplayField>Property__c</errorDisplayField>
        <errorMessage>Complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryWhenActivateContract_StartDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status , &apos;Activated&apos;),
        ISPICKVAL(Status , &apos;Changes Active&apos;)
    ),
    ISBLANK(StartDate)
)</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>Complete this field</errorMessage>
    </validationRules>
</CustomObject>